# osgb

./: .gitignore  LICENSE  README.md  osgb.cabal  stack.yaml
app/: Main.hs
src/: Conversion.hs  Lib.hs
src/Conversion/: Constants.hs  ETRS89OSGB36.hs  EllipsoidGrid.hs
