name:                osgb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/DanMeakin/osgb#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Meakin
maintainer:          dan@danmeakin.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Conversion
                     , Conversion.EllipsoidGrid
                     , Conversion.Constants
                     , Conversion.ETRS89OSGB36
  build-depends:       base >= 4.7 && < 5
                     , AC-Angle
                     , array
                     , bytestring
                     , bytestring-lexing
  default-language:    Haskell2010

executable osgb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , osgb
                     , AC-Angle
                     , bytestring
  default-language:    Haskell2010

test-suite osgb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , osgb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DanMeakin/osgb
